Update `syn`, `quote` and `proc-macro2`

--- a/futures-macro-async/Cargo.toml
+++ b/futures-macro-async/Cargo.toml
@@ -13,12 +13,12 @@ few other assorted macros.
 proc-macro = true
 
 [dependencies]
-quote = "0.4"
-proc-macro2 = "0.2"
+quote = "0.5"
+proc-macro2 = "0.3"
 
 [dependencies.syn]
-version = "0.12.13"
-features = ["full", "fold", "parsing", "printing", "extra-traits"]
+version = "0.13"
+features = ["full", "fold", "parsing", "printing", "extra-traits", "proc-macro"]
 default-features = false
 
 [features]
